starter code from boot-camp/symmetrical-bassoon, updated through package.json with npm install. Added idb.js to public/js and <script> tag at bottom of index.js to incorporate.

--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/crosenfrisk/on-budget/"
+    "url": "git+https://github.com/crosenfrisk/on-budget.git"
   },
   "author": "",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/crosenfrisk/on-budget/issues"
   },
-  "homepage": "https://github.com/crosenfrisk/on-budget/",
+  "homepage": "https://github.com/crosenfrisk/on-budget#readme",
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
