updated env var for mongodb

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://testUser1:Mong0db@cluster0.7iwuh.mongodb.net/on-budget-tracker?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://testUser1:Mong0db@i1gD@cluster0.7iwuh.mongodb.net/on-budget-tracker?retryWrites=true&w=majority
