--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://fakeUser:testUser1@i1gD@cluster0.7iwuh.mongodb.net/on-budget-tracker?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://fakeUser:testUser1@cluster0.7iwuh.mongodb.net/on-budget-tracker?retryWrites=true&w=majority
